100_monitoring/prometheus/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: kube-system
spec:
  rules:
  - host: prometheus.inmylab.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-example-app
  namespace: default
  labels:
    app: kube-controller-manager
spec:
  clusterIP: None
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: prometheus-example-app
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-example-app
  namespace: default
spec:
  rules:
  - host: app.inmylab.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
